--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,24 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.title{
+  margin-left:50px;
+  font-family: 'Lora', serif;
+}
+.inputText{
+  width:600px;
+  height:300px;
+  margin:50px;
+}
+
+.convertedText{
+  width:600px;
+  height:300px;
+  margin:50px;
+}
+
+.copyright{
+  font-family: 'Lora', serif;
+  margin-left:50px;
+}
