--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.github{
+  width:50px;
+  height:50px;
+  border:solid 0px transparent;
+  background-color:transparent;
+}
