--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,40 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin:0px;
+  padding:0px;
+  height:100px;
   font-family: sans-serif;
 }
 
 .title{
   margin-left:50px;
   font-family: 'Lora', serif;
+  font-size:30px;
+  text-align:left;
+  color:grey;
 }
+
 .inputText{
-  width:600px;
-  height:300px;
-  margin:50px;
+  width:90%;
+  height:600px;
+  margin:0px 50px 0px 0px;
+  padding:10px;
+  padding-left:30px;
+  border:solid 0px transparent;
+  background-color:rgb(65, 65, 65);
+  color:rgb(212, 212, 212);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size:15px;
 }
 
 .convertedText{
   font-family: 'Lora', serif;
-  width:600px;
-  height:300px;
-  margin:50px;
+  width:90%;
+  margin:10px 50px 10px 0px;
+  padding:10px;
 }
 
 .copyright{
   font-family: 'Lora', serif;
   margin-left:50px;
+  border: solid 0px grey;
 }
